Continuation of building the endpoints(Tickets) and getting the backend ready for the dev of the frontend + docs
